[package]
name = "signaling_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = "0.19.0"
uuid = { version = "1.4.1", features = ["v4"] }
